# ChangeLog for app-i18n/kakasi
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/kakasi/ChangeLog,v 1.13 2008/10/30 23:11:00 matsuu Exp $

*kakasi-2.3.4-r1 (30 Oct 2008)

  30 Oct 2008; MATSUU Takuto <matsuu@gentoo.org> +kakasi-2.3.4-r1.ebuild:
  Fixed CC variable, bug #243596.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> kakasi-2.3.4.ebuild:
  Mark 2.3.4 stable on ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> kakasi-2.3.4.ebuild:
  Mark 2.3.4 ~ia64

  12 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org> kakasi-2.3.4.ebuild:
  Stable on sparc

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  16 Dec 2004; Markus Rothe <corsair@gentoo.org> kakasi-2.3.4.ebuild:
  Stable on ppc64

  03 Nov 2004; Markus Rothe <corsair@gentoo.org> kakasi-2.3.4.ebuild:
  Added ~ppc64 keywordd; bug #69720

  15 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> kakasi-2.3.4.ebuild:
  Stable on ppc.

  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> kakasi-2.3.4.ebuild:
  Stable on alpha.

*kakasi-2.3.4 (30 Apr 2003)

  21 Jun 2003; YAMAKURA Makoto <yakina@gentoo.org> kakasi-2.3.4.ebuild:
  unmasked for x86

  30 Apr 2003; Robert Coie <rac@gentoo.org> kakasi-2.3.4.ebuild:
  Initial import, based on ebuild submitted by Henry So, Jr. <henryso@panix.com>
  in bug #19808
