@@ -1,5 +1,5 @@
 DIST kakasi-2.3.4.tar.gz 1099258 RMD160 8ed84c5aaa0713484ab070871f555b12ded31802 SHA1 ab95a226f301955d2e8ae0d347afbb567e25fbe7 SHA256 c272560f5c11fe45b011c4e26ada66218fb0109d5582c5876aa49c5e24718534
 EBUILD kakasi-2.3.4-r1.ebuild 781 RMD160 49f6c9e7514cfa88b267afc4290db0d634bc9fc3 SHA1 da9a034c09ace214989b1ae246a319585ed6133e SHA256 c3c00984b4c42d44a0a70a5c8464c33881dfe68a0753731008a8ac23cbb17ce9
-EBUILD kakasi-2.3.4.ebuild 1046 RMD160 c05f58f58bd5170f90c1e8c50de387ae8afc2d79 SHA1 3c95f9bc02d094b65230b4bfea074c93bb0ec4f8 SHA256 959fcd8551a19c805a59ae25075be6c8160b0cfdd708fc9e9205b2d1d75eff54
-MISC ChangeLog 1397 RMD160 eba29de34ae638d25220ae6e798507b6afc05be5 SHA1 d2aeef66c304c3e5bd9e359090bd2f4d2f89878a SHA256 3b3a2e6460bc1bf797cd9cae7e695153e4f8d46dfcf193d3a7ac83a10bf3f9d1
+EBUILD kakasi-2.3.4.ebuild 1033 RMD160 1fa8993a789b6f714c0f7a05fca910126c126330 SHA1 79491e01665175a54a64e81dd21860c769c20e66 SHA256 b7d9718c545f29cd408d0fa27f691cd3c2fa69cb1497b243b4426ac6402e5048
+MISC ChangeLog 1492 RMD160 f4e85a623dc491ba76e4c5e005ca5cb8e010cba5 SHA1 6d68e84b1223472881dd561f70afa8f2b125cd39 SHA256 9c94e687b9fe094f0db9a8b73883cb78f6fec65a992e60fbf4f32086697257b3
 MISC metadata.xml 156 RMD160 8adcf0a760a605cd42501f53097ca3a1c4e8daad SHA1 8ccc2b0f20743002b783b1f7b5162c71f7f54c2e SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215
