@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/kakasi
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/kakasi/ChangeLog,v 1.13 2008/10/30 23:11:00 matsuu Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/kakasi/ChangeLog,v 1.14 2009/09/23 15:41:27 patrick Exp $
+
+  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> kakasi-2.3.4.ebuild:
+  Remove virtual/libc
 
 *kakasi-2.3.4-r1 (30 Oct 2008)
 
